@@ -18,4 +18,6 @@ Alpha 4.0: 2011-01-10 First stable version compatible with both FreeSurfer files
 
 Alpha 4.1: 2011-01-21 Fixed a few minor bugs in version 4.0.
 
-Alpha 4.2: to be released on 2011-01-30 This version will greatly reduce memory cost and hopefully speed up
+Alpha 4.2: to be released on 2011-01-30 This version will greatly reduce memory cost and hopefully speed up  
+
+Alpha 5.0: 2012-10-05 Updates structure greatly to allow clouchoux's type pits extraction and allow more flexible extraction settings. Version Alpha 4.2 didn't make it. Speed tune-up will be implmented in Alpha 5.1. 
